cmake project infrastructure

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,16 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${OUTPUT}/bin")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${OUTPUT}/lib")
 set (CMAKE_CXX_FLAGS "--std=c++11 ${CMAKE_CXX_FLAGS}")
 
+set (Boost_USE_STATIC_LIBS ON)
+set (Boost_USE_MULTITHREADED ON)
+
+set(BOOST_COMPONENTS
+    filesystem
+    log
+    thread)
+
+find_package(Boost 1.65.1 COMPONENTS ${BOOST_COMPONENTS} REQUIRED)
+
 add_subdirectory (Client)
 add_subdirectory (Common)
 add_subdirectory (Service)
