--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 2.8.3)
 project (Catan)
 
-set(OUTPUT "${CMAKE_CURRENT_SOURCE_DIR}/../output")
+set(OUTPUT "${CMAKE_CURRENT_SOURCE_DIR}/../output/${CMAKE_BUILD_TYPE}")
 set(CMAKE_BUILD_FILES_DIRECTORY ${OUTPUT})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${OUTPUT}/bin")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${OUTPUT}/lib")
